<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/menuHome"/>

        <item android:id="@+id/menuProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menuProfile"/>

        <item android:id="@+id/menuFavourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/menuFavourites"/>

        <item android:id="@+id/menuOrders"
            android:title="@string/menuOrders"
            android:icon="@drawable/ic_orderhistory"/>

        <item android:title="@string/menuFaqs"
            android:icon="@drawable/ic_faqs"
            android:id="@+id/menuFaqs"/>

        <item android:id="@+id/menuLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menuLogout"/>
    </group>
</menu>