<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Faq">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion1"
            android:text="@string/question1"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer1"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion2"
            android:text="@string/question2"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer2"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion3"
            android:text="@string/question3"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer3"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion4"
            android:text="@string/question4"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer4"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion5"
            android:text="@string/question5"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer5"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvQuestion6"
            android:text="@string/question6"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAnswer6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/answer6"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

</ScrollView>